--- a/Persons(15th).ipynb
+++ b/Persons(15th).ipynb
@@ -109,21 +109,11 @@
    "source": [
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85f1066e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "person"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +127,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "52634da84371cba311ea128a5ea7cdc41ff074b781779e754b270ff9f8153cee"
+   }
   }
  },
  "nbformat": 4,
